<resources>
    <string name="app_name">POS tester</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">POS主頁</string>
    <string name="title_notifications">Notifications</string>
    <string name="downloadingText">下載進度</string>
    <string name="downloadPercentage">0 %</string>
    <string name="txtAccountHint">請輸入帳號</string>
    <string name="txtPassword">密碼</string>
    <string name="txtPasswordHint">請輸入密碼</string>
    <string name="txtClerk">收銀員</string>
    <string name="txtLogin">登入</string>
    <string name="txtSearchBarHint">請輸入貨號</string>
    <string name="txtConfirm">確定</string>
    <string name="txtClearText">清除</string>
    <string name="txtTotalPrice">總價</string>
    <string name="txtSumShopCart">小計</string>
    <string name="txtClerkName">收銀員</string>
    <string name="txtBarcode">掃描條碼</string>
    <string name="txtNowShowing">目前項目</string>
    <string name="txtFname">品名</string>
    <string name="txtFMagno">貨號</string>
    <string name="txtFclickNum">0 個</string>
    <string name="txtFsum">付款</string>
    <string name="txtUnitPrice">價格</string>
    <string name="txtCancelSelection">0</string>
    <string name="txtPlus1">+1</string>
    <string name="txtMinus1">-1</string>
    <string name="txtSelfPriceSetting">商品變價</string>
    <string name="txtUserSettingButton">非會員</string>
    <string name="txtMemberClass">非會員</string>

    <string name="txtUserBtn1">按鈕</string>
    <string name="txtUserBtn2">按鈕</string>
    <string name="txtUserBtn3">按鈕</string>
    <string name="txtUserBtn4">按鈕</string>
    <string name="txtUserBtn5">按鈕</string>
    <string name="txtMemberHint">請輸入會員</string>
    <string name="txtCouponName">折價券名稱</string>
    <string name="txtCouponID">折價券編號</string>
    <string name="txtCouponPrice">折價券金額</string>
    <string name="txtInvoicePrinter">統編</string>
    <string name="txtCash">現金</string>
    <string name="txtFAmount">數量</string>
    <string name="txtPrinter">支付方式</string>
    <string name="buttonCancel">取消</string>
    <string name="txtEnterTextTitle">這是標題</string>
    <string name="txtFulfil">請輸入內容</string>
    <string name="txtCharge">找零</string>
    <string name="txtCoupon">行銷折價券</string>
    <string name="txtAddProduct">加入商品</string>
    <string name="txtDiscount">折扣</string>
</resources>