<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!--選擇的商品項次顯示頁面-->

    <!--商品編號-->
    <TextView
        android:id="@+id/txt_productIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/txtCancelSelection"
        android:textColor="@color/blue_500"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <!-- 商品名稱 -->
    <TextView
        android:id="@+id/txt_productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtFname"
        android:textColor="@color/blue_500"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <!-- 商品價格 -->
    <TextView
        android:id="@+id/txt_productPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtUnitPrice"
        android:textColor="@color/blue_500"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <!--商品點擊數量-->
    <TextView
        android:id="@+id/txt_product_buy_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtFclickNum"
        android:textColor="@color/blue_800"
        android:textSize="15sp"/>

    <!-- 商品庫存 -->
    <TextView
        android:id="@+id/txt_productSum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtFsum"
        android:textColor="@color/blue_800"
        android:textSize="15sp"/>
</LinearLayout>