<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/login_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtClerk"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtAccountHint"
            android:backgroundTint="#E91E63"
            android:inputType="number"
            android:textSize="30sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPassword"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:inputType="number"
            android:hint="@string/txtPasswordHint"
            android:textSize="30sp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#B18FEF"
            android:text="@string/txtLogin"
            android:textSize="30sp"/>

    </LinearLayout>
</RelativeLayout>