<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changeNumLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSelfPriceSetting"
        android:textColor="@color/blue_500"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btnSelectPlus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/edtScanNumber"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:text="@string/txtPlus1"
        android:textSize="20sp"
        android:textColor="@color/blue_800"
        tools:ignore="RelativeOverlap"
        android:backgroundTint="@color/blue_200"/>

    <EditText
        android:id="@+id/edtScanNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/txtCancelSelection"
        android:textSize="35sp"
        android:textColor="@color/blue_800"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"
        android:backgroundTint="@color/blue_200"/>

    <Button
        android:id="@+id/btnSelectMinus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/edtScanNumber"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:text="@string/txtMinus1"
        android:textSize="20sp"
        android:textColor="@color/blue_800"
        android:backgroundTint="@color/blue_200"/>

    <Button
        android:id="@+id/btnScanNumConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtScanNumber"
        android:layout_marginTop="70dp"
        android:text="@string/txtConfirm"
        android:textSize="25sp"
        android:textColor="@color/blue_800"
        android:backgroundTint="@color/blue_200"/>

</RelativeLayout>