<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">

    <!--清單標頭說明-->
    <LinearLayout
        android:id="@+id/lr_filterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <!--商品項次-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>

        <!-- 商品名稱 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtFname"
            android:textColor="@color/blue_500"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!-- 商品價格 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtUnitPrice"
            android:textColor="@color/blue_500"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!--商品點擊數量-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtFAmount"
            android:textColor="@color/blue_500"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!--商品點擊數量-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtDiscount"
            android:textColor="@color/blue_500"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!-- 商品庫存 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtSumShopCart"
            android:textColor="@color/blue_500"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!--購物清單顯示區-->
    <GridView
        android:id="@+id/gr_paymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lr_filterTitle"
        android:layout_above="@+id/lrInvoiceShowUp"/>

    <!--金額找零顯示區-->
    <LinearLayout
        android:id="@+id/lrInvoiceShowUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lrChoicePayment"
        android:orientation="vertical">

        <!--統編顯示區-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtScodeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtInvoicePrinter"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtVATNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:text="@string/txtCancelSelection"
                android:textSize="20sp"/>
        </LinearLayout>

        <!--數量顯示區-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFAmount"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtCartAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/txtCancelSelection"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/txtUserSettingButton"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/txtCancelSelection"
                android:textSize="20sp"/>
        </LinearLayout>

        <!--小計顯示區-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTotalPrice"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtCashSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/txtCancelSelection"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/txtFsum"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edtCashAmount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:hint="@string/txtCancelSelection"
                android:textSize="20sp"
                android:textAlignment="center"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <!--找零顯示區-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCharge"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/txtCancelSelection"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>


    <!--付款方式選擇區-->
    <LinearLayout
        android:id="@+id/lrChoicePayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!--是否需要印統編-->
        <Button
            android:id="@+id/btnsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInvoicePrinter"
            android:textSize="20sp"/>

        <!--付款方式-->
        <Button
            android:id="@+id/btnsPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCash"
            android:textSize="20sp"/>

        <!--結帳按鈕-->
        <Button
            android:id="@+id/btnsPaymentConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/txtConfirm"
            android:textSize="20sp"/>
    </LinearLayout>

</RelativeLayout>