<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/blue_100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--人員顯示區-->
        <LinearLayout
            android:id="@+id/lrMemberGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--收銀員-->
            <TextView
                android:id="@+id/textDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtClerkName"
                android:textSize="20sp"/>

            <!--會員-->
            <TextView
                android:id="@+id/textMemberAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="非會員"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SearchBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lrMemberGroup"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_searchRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:autofillHints="empty"
                android:hint="@string/txtSearchBarHint"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/blue_500"
                android:textColorHint="@color/blue_500"/>

            <Button
                android:id="@+id/bt_barcodeScanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/txtBarcode"
                android:textSize="15sp"
                android:textColor="@color/blue_800"
                android:backgroundTint="@color/cornBlue"/>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="0.1"
                android:text="@string/txtAddProduct"
                android:textSize="15sp"
                android:textColor="@color/blue_800"
                android:backgroundTint="@color/lavender"/>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="0.1"
                android:text="@string/txtClearText"
                android:textSize="15sp"
                android:textColor="@color/blue_800"
                android:backgroundTint="@color/blue2"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_filterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SearchBarLayout"
            android:orientation="horizontal">
            <!-- 商品項次 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text=" "
                android:textColor="@color/blue_500"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <!-- 商品名稱 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtFname"
                android:textColor="@color/blue_500"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <!-- 商品價格 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtUnitPrice"
                android:textColor="@color/blue_500"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <!--商品點擊數量-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtFAmount"
                android:textColor="@color/blue_500"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <!--商品折扣-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtDiscount"
                android:textColor="@color/blue_500"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <!-- 商品小計 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtSumShopCart"
                android:textColor="@color/blue_500"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- 欄位內容 -->
        <GridView
            android:id="@+id/gr_tableProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lr_filterTitle"
            android:layout_above="@+id/lrClerkOpr"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!--店員常用操作內容-->
        <LinearLayout
            android:id="@+id/lrClerkOpr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lrLeftButton">

            <!--會員選項 (非會員就會成會員)-->
            <Button
                android:id="@+id/btnUserFavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lavender"
                android:text="@string/txtUserSettingButton"
                android:textColor="@color/blue_800"
                android:textSize="15sp"/>

            <!--現折 (單一商品折扣，輸入折抵金額)-->
            <Button
                android:id="@+id/btnCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lavender"
                android:text="現折"
                android:textColor="@color/blue_800"
                android:textSize="15sp" />

            <!--全折 (所有商品折扣，輸入折抵比例)-->
            <Button
                android:id="@+id/btnMultipleCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lavender"
                android:text="全折"
                android:textColor="@color/blue_800"
                android:textSize="15sp"/>

            <!--更正 (刪除最後一項商品)-->
            <Button
                android:id="@+id/btnMerchantClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cornBlue"
                android:text="更正"
                android:textColor="@color/blue_800"
                android:textSize="15sp"/>
        </LinearLayout>

        <!--顯示總價-->
        <LinearLayout
            android:id="@+id/lrShowUpSum"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/lrClerkOpr"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginBottom="60dp">

            <!--總小計-->
            <TextView
                android:id="@+id/txt_totalDollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtTotalPrice"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <!--用戶自定義按鍵-->
        <LinearLayout
            android:id="@+id/lrLeftButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/lrShowUpSum"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginBottom="60dp">

                <!--layout1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <!--自訂常用折價券-->
                    <Button
                        android:id="@+id/btnDiscountList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="3dp"
                        android:text="@string/txtCoupon"
                        android:textSize="15sp"
                        android:textColor="@color/blue_800"
                        android:backgroundTint="@color/green1"/>

                    <!--取消交易按鈕-->
                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:layout_weight="1"
                        android:text="取消交易"
                        android:textSize="15sp"
                        android:textColor="@color/blue_800"
                        android:backgroundTint="@color/blue2"/>
                </LinearLayout>

                <!--layout2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <!--現折按鈕-->
                    <Button
                        android:id="@+id/btnSingleCharge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:layout_weight="1"
                        android:text="折數"
                        android:textSize="15sp"
                        android:textColor="@color/blue_800"
                        android:backgroundTint="@color/blue_200"/>

                    <!-- 9折 -->
                    <Button
                        android:id="@+id/btnNinetyCharge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:layout_weight="1"
                        android:text="9折"
                        android:textSize="15sp"
                        android:textColor="@color/blue_800"
                        android:backgroundTint="@color/lavender"/>

                    <!-- 確認價格 -->
                    <Button
                        android:id="@+id/btn_deal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:layout_weight="1"
                        android:text="@string/txtSumShopCart"
                        android:textSize="15sp"
                        android:textColor="@color/blue_800"
                        android:backgroundTint="@color/pink1"/>
                </LinearLayout>
            </LinearLayout>
    </RelativeLayout>

    <!--drawer table test-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/my_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_gravity="start"
        app:menu="@menu/my_nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>